--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,3 +20,5 @@
 <link href="/stylesheets/css/sb-admin-2.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/stylesheets/css/toastr.css">
+
+<link rel="stylesheet" type="text/css" href="/stylesheets/css/w2ui-1.5.min.css">
