--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -22,11 +22,11 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-6">
-                                <label class="form-label">Product Name</label>
-                                <input autocomplete="off" id="productnamemodal" name="productnamemodal" type="text" class="form-control" placeholder="Enter New Product Name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <label class="form-label">Material Name</label>
+                                <input autocomplete="off" id="productnamemodal" name="productnamemodal" type="text" class="form-control" placeholder="Enter New Material Name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label">description</label>
+                                <label class="form-label">Description</label>
                                 <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" type="text" class="form-control" placeholder="Enter New Description" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                                 </select>          
                             </div>
                         </div>
-                        <div class="row mb-2">
+                        <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Price</label>
                                 <input autocomplete="off" id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
@@ -100,9 +100,9 @@
                             <div class="col-md-6 mb-1">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Product Name</span>
+                                        <span class="input-group-text" id="basic-addon2">Name</span>
                                     </div>
-                                    <input autocomplete="off" id="productname" name="productname" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="productname" name="productname" type="text" class="form-control" placeholder="Enter Material Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6 mmb">
@@ -110,7 +110,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Description</span>
                                     </div>
-                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Product Description" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Material Description" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
