--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -60,6 +60,9 @@
 <!--CHART-->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<!-- W2UI -->
+<script type="text/javascript" src="/javascripts/w2ui-1.5.min.js"></script>
+
 <script>
   //#region Toastr
   function successlogin(title, text) {
