--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -63,8 +63,11 @@
                         </div>
     
                         <div class="row justify-content-end mt-1">
-                            <div class="col-2">
-                                <button type="button" id="submitBtn" class="btn btn-outline-inventory">Update</button>
+                            <div class="col-md-2 text-right">
+                                <button type="button" id="submitBtn" class="btn btn-outline-inventory">
+                                    <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
+                                    <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                                </button>
                             </div>
                         </div>
                     </div>
