--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -106,7 +106,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-inventory" id="submitPurchaseOrder">Submit Report</button>
+                <button type="button" class="btn btn-outline-inventory" id="submitPurchaseOrder">
+                    <span id="reportLabel">Report</span>
+                    <span id="reportLoading" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                </button>
             </div>
         </div>
     </div>
@@ -225,7 +228,10 @@
                     </div>
                     <div class="row justify-content-end mt-1">
                         <div class="col-md-2 text-right">
-                            <button type="button" id="submitBtn" class="btn btn-outline-inventory w-100">Submit</button>
+                            <button type="button" id="submitBtn" class="btn btn-outline-inventory w-100">
+                                <span id="submitLabel">Report</span>
+                                <span id="submitLoading" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                            </button>
                         </div>
                     </div>
                 </div>
