--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -152,8 +152,7 @@
                                                     <i class="fa fa-chevron-left"></i>
                                                 </div>
                                                 <input autocomplete="off" type="hidden" name="cashierid" id="cashierid">
-                                                <ul class="customdropdown-menu cashierlist">
-                                                </ul>
+                                                <ul class="customdropdown-menu cashierlist"></ul>
                                             </div>
                                         </div>
                                         <div class="col-1" style="padding-left: 0 !important; padding-right: 0 !important;">
